First SB run tested,api endpoints working

--- a/inventoryservice/docker-compose.yml
+++ b/inventoryservice/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: mysql
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: password # Root password
+      MYSQL_ROOT_PASSWORD: password
       MYSQL_DATABASE: ticketing
     ports:
       - "3306:3306" # Expose MySQL port
