--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 /workspace.xml
 # Environment-dependent path to Maven home directory
 /mavenHomeManager.xml
+inventoryservice/volume-data/
+# .gitignore
+inventoryservice/volume-data/mysql_keycloak_data/mysql.sock
