--- a/apigateway/src/main/resources/application.properties
+++ b/apigateway/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.application.name=apigateway
 server.port=8091
+
+#Keycloak
+keycloak.auth.jwk-set.uri=http://localhost:8092/realms/ticketing-security-realm/protocol/openid-connect/certs
+spring.security.oauth2.resourceserver.jwt,issue-uri=http://localhost:8092/realms/ticketing-security-realm
