--- a/bookingservice/src/main/resources/application.properties
+++ b/bookingservice/src/main/resources/application.properties
@@ -17,3 +17,7 @@ spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.template.default=booking
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
+#OpenApi
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/v3/api-docs
