--- a/orderservice/src/main/resources/application.properties
+++ b/orderservice/src/main/resources/application.properties
@@ -17,4 +17,5 @@ spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.Str
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.properties.spring.json.type.mapping=bookingEvent:com.PlexiBook.bookingservice.event.BookingEvent
 
+#Url for inventory service client
 inventory.service.url=http://localhost:8080/api/v1/inventory
